--- a/index.html
+++ b/index.html
@@ -18,7 +18,88 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <!-- title -->
+    <div class="title">
+      <h2>general question</h2>
+    </div>
+    <!-- questions -->
+    <div class="section-center">
+      <!-- single question -->
+      <article class="question">
+        <!-- question title -->
+        <div class="question-title">
+          <p>do you accept all major credit cards</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <!-- question text -->
+        <div class="question-text">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            laudantium laborum maxime magni soluta, distinctio sed ducimus at
+            cumque nihil accusamus totam, autem culpa reprehenderit, dolore rem
+            cupiditate pariatur sunt!
+          </p>
+        </div>
+      </article>
+      <!-- end single question -->
+      <!-- single question -->
+      <article class="question">
+        <!-- question title -->
+        <div class="question-title">
+          <p>do you support local farmers?</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <!-- question text -->
+        <div class="question-text">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            laudantium laborum maxime magni soluta, distinctio sed ducimus at
+            cumque nihil accusamus totam, autem culpa reprehenderit, dolore rem
+            cupiditate pariatur sunt!
+          </p>
+        </div>
+      </article>
+      <!-- end single question -->
+      <!-- single question -->
+      <article class="question">
+        <!-- question title -->
+        <div class="question-title">
+          <p>do you use orgaic ingredients?</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <!-- question text -->
+        <div class="question-text">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            laudantium laborum maxime magni soluta, distinctio sed ducimus at
+            cumque nihil accusamus totam, autem culpa reprehenderit, dolore rem
+            cupiditate pariatur sunt!
+          </p>
+        </div>
+      </article>
+      <!-- end single question -->
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
